@@ -1,5 +1,6 @@
 2020-XX-YY v. 2.1.t
 ---------------------
+- Fix issue #172 `show only new packages` triggers dnfdragora crash
 - Fix issue #168
 - Managed line feed into descriptions see https://bugs.mageia.org/show_bug.cgi?id=27274
 - Added an user preference to consider upgrades as updates (issue #163)
